--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <title>forecastic</title>
   </head>
   <body>
-    <div id="root"> ddjjks</div>
+    <div id="root"> </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
